# Lokal-RAG

./: .gitignore  CLAUDE.md  ChatArchitecture.md  GRANITE_DOCLING_SETUP.md  LOKAL_RAG_MCP_SPECIFICATION.md  LOKAL_RAG_MCP_SPECIFICATION_V2.md  MousewheelScrollingResearch.md  PADDLEOCR_SETUP.md  README.md  SCROLL_DEBUG_GUIDE.md  TOGA_MIGRATION_PLAN.md  TOGA_MIGRATION_PLAN_V2.md  TOGA_QUICKSTART.md  TOGA_V2_CHANGELOG.md  TechnicalSpecification.md  TechnicalSpecificationReview.md  app_config.py  app_controller.py  app_controller_toga.py  app_platform_macos.py  app_services.py  app_storage.py  app_view.py  app_view_toga.py  main.py  main_toga.py  requirements.txt  setup_marker.py  test_gemini_models.py
lokal_rag_mcp/: README.md  SETUP_GUIDE.md  __init__.py  chat.py  config.py  pyproject.toml  query_utils.py  reranker.py  search_pipeline.py  server.py  start_mcp_server.sh  storage.py
lokal_rag_mcp/examples/: claude_desktop_config.example.json  settings.example.json
lokal_rag_mcp/tests/: __init__.py  conftest.py  test_config.py  test_query_utils.py  test_reranker.py
